refactor: change logic based on changes in method visitor